shared/clusterb/deployment - rdma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faraway-deployment-rdma
  namespace: llm-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faraway-rdma
  template:
    metadata:
      labels:
        app: faraway-rdma
    spec:
      containers:
      - name: faraway-container
        image: ik2227/llama2
        ports:
        - containerPort: 8080
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /data/roce
          name: roce-client
        - mountPath: /dev/infiniband
          name: ib
      volumes:
      - name: roce-client
        hostPath:
          path: /shared/roce
      - name: ib
        hostPath:
          path: /dev/infiniband
      nodeSelector:
        supports: rdma
