shared/clusterb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longago-deployment
  namespace: llm-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longago
  template:
    metadata:
      labels:
        app: longago
    spec:
      nodeSelector:
        supports: rdma  # Ensures scheduling on RDMA-enabled nodes
      containers:
      - name: longago-container
        image: ik2227/llama2
        securityContext:
          privileged: true  # 
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /data/roce
          name: roce-client
        - mountPath: /dev/infiniband
          name: ib
      volumes:
      - name: roce-client
        hostPath:
          path: /shared/roce
      - name: ib
        hostPath:
          path: /dev/infiniband
